# alphadeck

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  mockup_board_cockpit.html
backend/: .dockerignore  .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
backend/app/: __init__.py  deps.py  main.py  openapi_export.py  schemas_api.py
backend/app/routers/: admin.py  scoreboard.py  theses.py  workbench.py
backend/calls/: assembler.py  confidence.py  counter_case.py  grading.py
backend/db/: bitemporal.py  drop_test_dbs.py  migrate.py  session.py  testdb.py
backend/db/migrations/: 0001_init.sql  0002_form4_txn_seq.sql  0003_thesis.sql  0004_dilution.sql  0005_catalyst.sql  0006_catalyst_horizon.sql  0007_theme_conviction.sql  0008_workbench_chain.sql  0009_workbench_scoring_facts.sql  0010_scoring_fact_note.sql  0011_thesis_fit.sql  0012_thesis_term_set.sql  0013_master_identity.sql  0014_fact_vouched.sql  0015_basket_member_conviction.sql  0016_master_category.sql  0017_master_is_primary.sql  0018_archetype_nullable.sql  0019_operator_decision.sql  0020_thesis_archived.sql  0021_thesis_exclusion.sql  0022_insider_aff10b5one.sql  0023_calls_ingest_health.sql  0024_insider_issuer_identity.sql  0025_shares_ads_ratio.sql
backend/domain/: base.py  call.py  coerce.py  config.py  enums.py  extraction.py  security.py  settings.py  signal.py  thesis.py  workbench.py
backend/ingest/: __init__.py  cash_burn.py  catalyst.py  http.py  revenue_mix.py  shares.py  theme_conviction.py
backend/ingest/doe/: __init__.py  client.py  entities.py  feed.py
backend/ingest/edgar/: annual_runway.py  annual_shares.py  client.py  converts.py  extract.py  form4.py  fulltext.py  submissions.py
backend/ingest/prices/: eod_loader.py  ingest_security.py  source.py
backend/llm/: __init__.py  chain_decomposition.py  client.py  flag_explanation.py  keyword_gen.py  prompt_loader.py  purity_estimate.py  tier_recommendation.py
backend/llm/prompts/: chain_decompose.md  chain_narrate.md  chain_research.md  flag_explain.md  keyword_gen.md  purity_estimate.md  tail_sweep.md  tier_recommend.md
backend/notify/: __init__.py
backend/pipeline/: __init__.py  audit_identity.py  backup.py  backup_job.py  call_for_thesis.py  core.py  cron_run_log.py  daily.py  daily_job.py  ingest_thesis.py  populate_master.py  provision_tenant.py  ratify_cash_burn.py  ratify_catalyst.py  ratify_common.py  ratify_revenue_mix.py  ratify_shares.py  repoint_canonical.py  run.py  schedule.py  seed.py
backend/replay/: __init__.py  compare.py  episodes.py  export.py  harness.py  metrics.py  pit.py  run.py  schema.py  scoring.py
backend/repositories/: __init__.py  calls_repo.py  decisions_repo.py  mappers.py  thesis_repo.py
backend/scoreboard/: __init__.py  artifact.py  assemble.py  decisions.py  prices.py  provenance.py  record.py  replay_snapshot.py  run.py  schema.py
backend/scripts/: daily_cron.sh
backend/securities/: coherence.py  figi.py  master.py  sec_tickers.py
backend/seed_data/edgar/: hims_converts_8k.htm  hims_converts_pricing.htm  hims_wells_form4.xml  unh_flynn_form4.xml  unh_gil_form4.xml  unh_hemsley_form4.xml  unh_noseworthy_form4.xml  unh_rex_form4.xml
backend/seed_data/prices/: HIMS.yahoo.json  LEU.yahoo.json  NNE.yahoo.json  OKLO.yahoo.json  SMR.yahoo.json  UNH.yahoo.json
backend/signals/: __init__.py  base.py  catalyst_conviction.py  common.py  dilution_clock.py  insider_conviction.py  registry.py  scan.py  theme_conviction.py  volume_breakout.py
backend/signals/display/: __init__.py  base.py  insider_flow.py  range52w.py  registry.py  sma.py  volume_regime.py
backend/tests/: conftest.py
backend/tests/app/: conftest.py  test_admin_api.py  test_archive_api.py  test_backup_api.py  test_decisions_api.py  test_display_signals_api.py  test_exclusions_api.py  test_scoreboard_api.py  test_scoreboard_operator_api.py  test_scoreboard_replay_api.py  test_theses_api.py  test_thesis_lists_api.py  test_workbench_api.py
backend/tests/calls/: factories.py  test_assembler_golden.py  test_hims_armed_call.py
backend/tests/db/: conftest.py  test_bitemporal.py  test_tenant_isolation.py  test_testdb.py
backend/tests/domain/: test_coerce.py  test_settings.py  test_signal.py
backend/tests/fixtures/: recall_answer_key.py
backend/tests/ingest/: test_annual_runway.py  test_annual_shares.py  test_cash_burn.py  test_converts.py  test_doe_feed.py  test_edgar_client.py  test_eod_loader.py  test_extract_coverage.py  test_form4.py  test_fulltext.py  test_http.py  test_pit.py  test_price_reversion.py  test_price_source.py  test_revenue_mix.py  test_shares.py  test_submissions.py  (+1 more)
backend/workbench/: chain_draft.py  discovery.py  draft_jobs.py  draft_run_log.py  enrichment.py  research_runner.py  run_loader.py  scoring.py  term_set.py  triage_store.py
(+292 files in other folders)
