[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alphadeck-backend"
version = "0.0.0"
description = "Alpha Deck backend — the thesis spine, signal detectors, and the call-assembler."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",  # to serve: python -m uvicorn app.main:app --reload
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff==0.15.15",   # pinned so CI matches local (lint/format are version-sensitive)
    "black==26.5.1",
]

# Flat layout: list the packages explicitly (no auto-discovery, so the venv/data dirs are never scanned).
[tool.setuptools]
packages = [
    "app", "app.routers",
    "calls", "db", "domain",
    "ingest", "ingest.edgar", "ingest.prices",
    "pipeline", "repositories", "securities", "signals",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # long evidence/label strings; black handles real wrapping

[tool.ruff.lint.isort]
known-first-party = [
    "domain", "calls", "app", "db", "ingest", "securities",
    "signals", "repositories", "pipeline", "replay", "llm", "tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"  # the sandboxed working dir denies .pytest_cache writes
